# wrapper-rs

./: Cargo.toml  build.rs  readme.md  run.conf
.github/: main.yml
.github/workflows/: main.yml
installer/: Cargo.toml
installer/src/: main.rs
src/: config.rs  main.rs  other.rs  reader.rs  test.rs  win.rs
