[package]
name = "call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# 最小体积优化
opt-level = 'z'
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "wincon", "winbase", "consoleapi"]
