[package]
name = "call"
version = "1.3.0"
description = "一个简单的用于不带控制台/带控制台调用其他程序的包装器"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# 最小体积优化
opt-level = 'z'
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "wincon", "processthreadsapi"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.0"
winapi = { version = "0.3", features = ["winnt"] }
