[package]
name = "call"
version = "1.4.0"
description = "一个简单的用于不带控制台/带控制台调用其他程序的包装器"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# 最小体积优化
opt-level = 'z'
strip = 'symbols'
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.0"
windows-sys = { version = "0.52", features = ["Win32_System_SystemServices"] }

[dependencies]
blake3 = "1.5.1"
toml = "0.8"

[workspace]
members = ["installer"]
